[gd_scene load_steps=4 format=3 uid="uid://wfdpme7ygead"]

[ext_resource type="Script" path="res://Scripts/Planes/PlayerPlanePath.gd" id="1_2uu10"]
[ext_resource type="Script" path="res://Scripts/Planes/PlayerPlaneYellow.gd" id="2_wrtp2"]
[ext_resource type="Texture2D" uid="uid://c7t8n5t2pkkk7" path="res://Sprites/kenney_pixel-shmup/Ships/ship_0011.png" id="3_bwobb"]

[node name="PlayerPlanePath" type="Path2D"]
script = ExtResource("1_2uu10")

[node name="PlayerPlane" type="PathFollow2D" parent="."]
position = Vector2(-10, 0)
script = ExtResource("2_wrtp2")
TEXTURE = ExtResource("3_bwobb")

[node name="Sprite2D" type="Sprite2D" parent="PlayerPlane"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("3_bwobb")

[node name="AttackTimer" type="Timer" parent="PlayerPlane"]
one_shot = true

[node name="TargetArea" type="Area2D" parent="PlayerPlane"]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerPlane/TargetArea"]
polygon = PackedVector2Array(0, 0, 200, 100, 200, -100)
